xee-xpath/src/sequence_type/snapshots/xee_xpath__sequence_type__value_type__tests__function_multiple.snap
---
source: xee-xpath/src/sequence_type/value_type.rs
expression: "type_for_value(&value,\n        |_|\n            {\n                match function::StaticFunctionId(1) {\n                    function::StaticFunctionId(1) => &signature1,\n                    function::StaticFunctionId(2) => &signature2,\n                    _ => unreachable!(),\n                }\n            }).unwrap()"
---
Item(
    Item {
        item_type: FunctionTest(
            TypedFunctionTest(
                TypedFunctionTest {
                    parameter_types: [
                        Item(
                            Item {
                                item_type: AtomicOrUnionType(
                                    Spanned {
                                        value: Name {
                                            name: "integer",
                                            prefix: Some(
                                                "xs",
                                            ),
                                            namespace: Some(
                                                "http://www.w3.org/2001/XMLSchema",
                                            ),
                                        },
                                        span: 0..0,
                                    },
                                ),
                                occurrence: One,
                            },
                        ),
                    ],
                    return_type: Item(
                        Item {
                            item_type: AtomicOrUnionType(
                                Spanned {
                                    value: Name {
                                        name: "integer",
                                        prefix: Some(
                                            "xs",
                                        ),
                                        namespace: Some(
                                            "http://www.w3.org/2001/XMLSchema",
                                        ),
                                    },
                                    span: 0..0,
                                },
                            ),
                            occurrence: One,
                        },
                    ),
                },
            ),
        ),
        occurrence: Many,
    },
)
